# fortran-test-framework

./: .gitignore  README.md  fpm.toml  pyproject.toml
examples/: CMakeLists.txt  fpm.toml
examples/cmake/: CMakeLists.txt
examples/make/: Makefile
examples/make/src/: module_sample.f90
examples/test/: run_tests.f90  test_module_sample.f90
fortest/: MANIFEST.in  pyproject.toml  runner.py
fortest/fortest/: __init__.py  build_system_detector.py  exit_status.py  fortran_result_formatter.py  fortran_test_executor.py  fortran_test_generator.py  fortran_test_runner.py  module_dependency_resolver.py  module_fortest_assertions.f90  project_builder.py  runner.py  test_code_generator.py  test_result.py  test_result_formatter.py  utilities.py
fortest/fortest_cli/: main.py
fortest/tests/: test_build_system_detector.py  test_fortran_result_formatter.py  test_fortran_test_executor.py  test_fortran_test_generator.py  test_fortran_test_runner.py  test_module_dependency_resolver.py  test_project_builder.py  test_runner.py  test_test_code_generator.py  test_test_result.py  test_test_result_formatter.py  test_utilities.py
fortran/: CMakeLists.txt  README.md  ford.md  fpm.toml
fortran/src/: module_fortest_assertions.f90
