[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortest"
version = "0.1.0"
description = "Automated test discovery and execution for Fortran"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "yokotakohei"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
]

[project.scripts]
fortest = "fortest_cli.main:main"

[project.urls]
Homepage = "https://github.com/yokotakohei/fortran-test-framework"
Repository = "https://github.com/yokotakohei/fortran-test-framework"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Only collect tests from the tests/ directory, not from fortest/ package
norecursedirs = ["fortest", "build", "dist", ".git", ".tox", "*.egg"]